# buutti-backend

./: .gitignore  Cargo.toml  README.md  Rocket.toml  books.db  empty.db  sqlite3.lib
.github/workflows/: rust.yml
migrations/2022-12-20-123134_create_books/: up.sql
src/: api_validation.rs  database.rs  endpoints.rs  main.rs  schema.rs  types.rs
src/tests/: errors.rs  filters.rs  happy_case.rs  health_check.rs  mod.rs
